--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="./assets/images/brand-logo.png" />
-    <title id="dynamic-title">Login Page</title>
+    <title id="dynamic-title">নৈপুণ্য</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 
     <!-- Bootstrap JS and jQuery (required for Bootstrap components) -->
-    <script>
+    <!-- <script>
         <header>
         <h1 id="header-title">Login</h1>
         </header>
@@ -42,7 +42,7 @@
           dynamicTitle.innerHTML = 'Login Page';
           headerTitle.innerHTML = 'নৈপুণ্য - লগ ইন';
         }
-      </script>
+      </script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
@@ -232,7 +232,7 @@ Language Switch
 
 <body>
     <div id="root"></div>
-   
+
     <script type="module" src="/src/main.tsx"></script>
 </body>
 
