--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
     <link href="/assets/noipunno/css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;800&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet">
 
     <!-- Bootstrap JS and jQuery (required for Bootstrap components) -->
     <!-- <script>
@@ -57,7 +60,7 @@
             background-position: center;
             background-repeat: no-repeat;
             padding: 3%;
-            font-family: 'Inter', sans-serif
+            font-family: Public Sans; 
                 /* min-height: 100vh; */
         }
 
