all garvage cose remove

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
         crossorigin="anonymous"></script>
     <style>
-        .body-bg {
+        /* .body-bg {
             background: linear-gradient(180deg, #BEFDFF 0%, #51B9BD 100%);
             background-image: url('/images/login-bg.png');
             background-size: cover;
@@ -61,8 +61,8 @@
             background-repeat: no-repeat;
             padding: 3%;
             font-family: Public Sans;
-            /* min-height: 100vh; */
-        }
+            
+        } */
 
         .login-form-card {
             padding: 8% 8% 25% 8%;
