--- a/index.html
+++ b/index.html
@@ -52,17 +52,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
         crossorigin="anonymous"></script>
-    <style>
-        /* .body-bg {
-            background: linear-gradient(180deg, #BEFDFF 0%, #51B9BD 100%);
-            background-image: url('/images/login-bg.png');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            padding: 3%;
-            font-family: Public Sans;
-            
-        } */
+
+    <!-- <style>
+   
 
         .login-form-card {
             padding: 8% 8% 25% 8%;
@@ -150,9 +142,7 @@
             color: #222;
         }
 
-        /***********
-Language Switch
- ************/
+
         .language-switch {
             visibility: hidden;
         }
@@ -200,7 +190,7 @@ Language Switch
             padding-left: 55px;
         }
 
-        /* mobile media query */
+  
 
         @media (max-width: 768px) {
             .switch-rail {
@@ -230,7 +220,8 @@ Language Switch
         .login-button:hover {
             background: #428F92;
         }
-    </style>
+    </style> -->
+
 </head>
 
 <body>
