--- a/index.html
+++ b/index.html
@@ -24,28 +24,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;800&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
-
-    <!-- Bootstrap JS and jQuery (required for Bootstrap components) -->
-    <!-- <script>
-        <header>
-        <h1 id="header-title">Login</h1>
-        </header>
-        // Get the title and header elements
-        var dynamicTitle = document.getElementById('dynamic-title');
-        var headerTitle = document.getElementById('header-title');
-    
-        // Determine the current page or the user's authentication status
-        var isLoggedIn = false; // Set to true if the user is logged in
-    
-        // Update the title and header based on the authentication status
-        if (isLoggedIn) {
-          dynamicTitle.innerHTML = 'After Login Page';
-          headerTitle.innerHTML = 'Welcome Back!';
-        } else {
-          dynamicTitle.innerHTML = 'Login Page';
-          headerTitle.innerHTML = 'নৈপুণ্য - লগ ইন';
-        }
-      </script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
@@ -53,180 +31,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
         crossorigin="anonymous"></script>
 
-    <!-- <style>
-   
-
-        .login-form-card {
-            padding: 8% 8% 25% 8%;
-            border: none;
-            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-        }
-
-        .login-container {
-            padding-top: 6%;
-            padding-bottom: 4%;
-        }
-
-        .teacher-login-title {
-            color: #181C32;
-            font-size: 30px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 39px;
-        }
-
-        .np-login-subtitle {
-            color: var(--text-secondary-color);
-        }
-
-        .np-login-checbox-text {
-            color: var(--text-secondary-color);
-        }
-
-        .login-button {
-            display: flex;
-            padding: 14px 112px 14px 111px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 6px;
-            background: rgba(66, 143, 146, 1);
-            margin: 0 auto;
-            width: 100%;
-        }
-
-        .login-button:hover {
-            background: #428F92;
-        }
-
-        .password-toggle {
-            position: absolute;
-            right: 3%;
-            top: 20%;
-            z-index: 100;
-        }
-
-        .np-login-field-icon {
-            position: absolute;
-            left: 4%;
-            z-index: 100;
-            top: 30%;
-            width: 20px;
-        }
-
-        .np-login-form-field {
-            border-radius: 5px !important;
-            background-color: #F5F8FA;
-            padding: 0.775rem 2.75rem;
-            border: none;
-        }
-
-        .login-field-title {
-            color: #428F92;
-            margin: 10px 0;
-
-        }
-
-        .login-next-page {
-            color: white;
-            text-decoration: none;
-        }
-
-        .login-forget-pass {
-            float: right;
-            text-decoration: none;
-            color: black;
-        }
-
-        .login-language {
-            font-weight: 400;
-            color: #222;
-        }
-
-
-        .language-switch {
-            visibility: hidden;
-        }
-
-        .switch-label {
-            position: relative;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-        }
-
-        .switch-rail {
-            transition: all 0.2s ease-in-out;
-            position: absolute;
-            width: 45px;
-            height: 30px;
-            background: #DDDDDD;
-            border-radius: 50px;
-            overflow: hidden;
-            left: 34%;
-        }
-
-        .switch-slider {
-            transition: all 0.2s ease-in-out;
-            position: absolute;
-            top: 4px;
-            left: 4px;
-            width: 22px;
-            height: 22px;
-            border-radius: 50%;
-            background: #428F92;
-        }
-
-        .language-switch:checked+.switch-label .switch-rail {
-            transition: all 0.2s ease-in-out;
-            background: #DDDDDD;
-        }
-
-        .language-switch:checked+.switch-label .switch-rail .switch-slider {
-            transition: all 0.2s ease-in-out;
-            transform: translateX(15px);
-        }
-
-        .switch-label-right {
-            padding-left: 55px;
-        }
-
-  
-
-        @media (max-width: 768px) {
-            .switch-rail {
-                left: 90%;
-            }
-
-            .login-language {
-                font-size: 11px;
-            }
-        }
-
-        .np-login-checkbox:checked {
-            background-color: rgba(66, 143, 146, 1);
-        }
-
-        .login-button {
-            display: flex;
-            padding: 14px 112px 14px 111px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 6px;
-            background: rgba(66, 143, 146, 1);
-            margin: 0 auto;
-            width: 100%;
-        }
-
-        .login-button:hover {
-            background: #428F92;
-        }
-    </style> -->
 
 </head>
 
-<body>
+<body style="background-color: #efefef ">
     <div id="root"></div>
-
     <script type="module" src="/src/main.tsx"></script>
 </body>
 
