new api applied

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         // Get the title and header elements
         var dynamicTitle = document.getElementById('dynamic-title');
         var headerTitle = document.getElementById('header-title');
+        var headerTitle_ = document.getElementById('header-title-rakesh');
     
         // Determine the current page or the user's authentication status
         var isLoggedIn = false; // Set to true if the user is logged in
